title for update logs updated

--- a/update-logs/1.3.0v.html
+++ b/update-logs/1.3.0v.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="The Minion Rush Encyclopedia is the ultimate resource for all things related to Minion Rush! Join our Discord server to contribute to our project!">
 		
 		<link rel="icon" type="image/jpg" href="../base/Media/LOGOS/MinionRushEncyclopediaIcon.png"/>
-		<title>Minion Rush Encyclopedia - Barker Costume</title>
+		<title>Minion Rush Encyclopedia - Version 1.3.0</title>
 		
 		<link rel="stylesheet" href="../base/style.css">
 		<link rel="stylesheet" media='screen and (min-width: 0px) and (max-width: 720px)' href="../base/m_style.css"/>
