--- a/update-logs/1.1.0v.html
+++ b/update-logs/1.1.0v.html
@@ -108,7 +108,7 @@
 			
 			<div id='Links' class="SmallMediaBox" style="float: right;"> 
 				<img src="../base/Media/ICONS/LINK.png" class="image_emoticon"> Links <p class="paragraph"> </p>
-				<p class='subscript'>There are no links available</p>
+				<a href='https://www.youtube.com/watch?v=MoQoAQeSJ20' class='hyperlink'>https://www.youtube.com/watch?v=MoQoAQeSJ20</a>
 			</div>
 		</div>
 		
