--- a/costumes/Baker.html
+++ b/costumes/Baker.html
@@ -46,6 +46,9 @@
 		
 		<!--	CONTENT GOES HERE	-->
 		
+		<script type="text/javascript" src="../base/ArticleMandatory.js">
+		</script>
+		
 		<div class='page'>
 		
 		<div id='Article'>
@@ -84,14 +87,15 @@
 		</div>
 		
 		<div id='Media'>
-			<div id='Media' class='BigMediaBox'> 
-			<img src="../base/Media/ICONS/MEDIA4.png" class="image_emoticon"> Media 
-					<div class='paragraph'> </div>
-					<div class='article_img_container'>
+			<div id='Media' class='BigMediaBox'>
+			<img src="../base/Media/ICONS/MEDIA4.png" class="image_emoticon"> Media
+			
+			<div class='paragraph'></div>
+					<div id='pic1' class='article_img_container' onmouseover='showImageDescription("Transparent PNG of the Baker Costume (Provided by Jayden Tries)")' onmouseleave='removeImageDescription()'>
 						<img src="../costumes/Media/IMAGES/Baker/Baker.png" class='subject_img'>
 					</div>			
 
-					<div class='article_img_container'>
+					<div id='pic2' class='article_img_container' onmouseover='showImageDescription("Screenshot of the Baker Costume as of version 8.0.1.")' onmouseleave='removeImageDescription()'>
 						<img src="../costumes/Media/IMAGES/Baker/Baker1.jpg" class='subject_img'>
 					</div>
 			</div>
